# plinth

./: .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  LICENSE  README.md  Taskfile.yaml  Taskfile.yml  biome.json  package.json  release-please-config.json  rsbuild.config.ts  tsconfig.json
src-tauri/: .env  .gitignore  Cargo.toml  package.json  tauri.conf.json
src-tauri/.sqlx/: query-010a0fdf1efd4879c033f945e2d66b93b615fe60223d4025eaa860df6c1366a6.json  query-0142918ac7cf67c415f2cc86edef6fd0bb2cdb6e293fb92333d7bd87611b1388.json  query-01fc33dec980de56ab98eaa9eff96d2d8604263305b1a5d2a7f3e5acb5250c5f.json  query-038a1b58248f454e7bc2c2454db6967718279047fbd22f1ed88996f5886d0daf.json  query-0509b5d1847f503a459e86aaef56d0ed2945b08cdf7b3dea725b56ec951adb76.json  query-058985d8933945c344d1c7117df61240a6702a06b6003d296a0ff9e5d9395383.json  query-060b2c9aa614fa72337a8e037d455c42070b5f29ba0c7ad0ee647f9b653df7e6.json  query-0678ef4e5c2779caf1c57fecdcb4058e5c1f0324ffbb63a312b9daf7e1fb1b58.json  query-078203e831a57317dbf6cf4adc5509fdab42f3418b002c1fb18df9196f20dc2b.json  query-0837386b58c2ddd19e7a21c18d78ea1b3a6fece71710e9d100920b67790fb694.json  query-09f849dcf87ddd90aae953f5046da99d5ba83c13659282fd77c050f59c718c26.json  query-0b2f2842f7a1f712b60285473d7b43fde34094801cd61c333728701602a67805.json  query-0be41daaf8fa9f3735b296b7071f1aea9959bb8008f4a31763361afcc18082ca.json  query-0d384091c7bc449afb3faff019b95105c32e7d67996915015f6a03df78593b83.json  query-1534859253bdb67d1ccd22f5f2eeacc3442add6f19d1f4290625571a0970f87c.json  query-18f18eca57d272cac853a64bfeb451408e5bc22d072f3bb8cdbdf1cad6eb4e57.json  query-1a0e3013280331e713a3bf86a46e0dfa0027c1ecef995668bb6324c89dc53687.json  query-1e0134b7410ee4dfa9cd13fe8e36b02230f62396b3e2ec6aed218a14a3d8cc4a.json  query-1fdf2ed15a055bdac03679751f38e6c86fd3cac6e8124898ed2d71936a199754.json  query-20272b049d4da5e2963d39666a2746301a283ad1bd7b718c62aae2f524b9d924.json  query-228dc5aec78925ac57b9ed6514b69bafcba6819d4112129d88c0e405fc514523.json  query-2320d021d54bec7a6aa98c76a577e307df9f8bd9fca586c720a5f70e5ddab062.json  query-233128aeb94058cddfb203fd78a96f4e5e4ecc7b4f09ac20685e7f644775093a.json  query-23fb7524ebee5829648a76be2774533b4bf912b0b0a778db796ad805fbb444ad.json  query-24e5686d2d5470763d6b4e0d9e1b15f1330f1bf4eb7f3019c33e15043b095abd.json  query-255119a08a7e0b983d52c0ab6d98d6fa2a0d63045ac248ac370cc09fb31c8df6.json  query-268739bfd52bf504d580c3f5adac82c42a6a0e74f0fb98fd629f4f19f41e469c.json  (+154 more)
src-tauri/icons/: icon.icns
(+379 files in other folders)
